blood_pressure app, second commit

--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -18,7 +18,7 @@
                 <ul class="sidebar-nav">
                     <li><a href="{% url 'index' %}">Домой</a></li>
                     <li><a href="{% url 'measures' %}">Все измерения</a></li>
-                    <li><a href="">Все пользователи</a></li>
+                    <li><a href="{% url 'users' %}">Все пользователи</a></li>
                 </ul>
                 {% endblock %}
             </div>
